--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -27,9 +27,9 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field fxFlex="48%">
+          <mat-form-field *ngIf="!isTeller" fxFlex="48%">
             <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelLegalForm' |translate}}</mat-label>
-            <mat-select formControlName="legalFormId">
+            <mat-select disabled formControlName="legalFormId">
               <mat-option *ngFor="let legalForm of legalFormOptions" [value]="legalForm.id">
                 {{ legalForm.value }}
               </mat-option>
@@ -166,40 +166,40 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="48%">
+          <mat-form-field fxFlex="96%">
             <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientSubmittedDate' |translate}}</mat-label>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="submittedOnDatePicker"
-                   formControlName="submittedOnDate">
+            <input matInput  [matDatepicker]="submittedOnDatePicker"
+                   formControlName="submittedOnDate" disabled>
             <mat-datepicker-toggle matSuffix [for]="submittedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #submittedOnDatePicker></mat-datepicker>
           </mat-form-field>
           <mat-form-field *ngIf="createClientForm.contains('account_payment')" fxFlex="48%">
             <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelSelectAccountForPayment' |translate}}</mat-label>
-            <mat-select formControlName="account_payment">
+            <mat-select disabled formControlName="account_payment">
               <mat-option *ngFor="let account of accountPayments"
                           [value]="account.id">
                 {{ account.name }}
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="active" class="margin-v">
+          <mat-checkbox disabled fxFlex="48%" labelPosition="before" formControlName="active" class="margin-v">
             {{'Client_Component.ClientStepper.GeneralStep.checkboxIsActivate' |translate}}
           </mat-checkbox>
-          <mat-form-field *ngIf="createClientForm.contains('activationDate')" fxFlex="48%">
+          <mat-form-field  fxFlex="48%">
             <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelClientActivatedDate' |translate}}</mat-label>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activatedOnDatePicker" required
+            <input matInput [matDatepicker]="activatedOnDatePicker"
                    formControlName="activationDate">
             <mat-datepicker-toggle matSuffix [for]="activatedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activatedOnDatePicker></mat-datepicker>
             <mat-error *ngIf="createClientForm.controls.activationDate.hasError('required')"
                        [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelClientActivatedDateMsg' |translate"></mat-error>
           </mat-form-field>
-          <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="addSavings" class="margin-v">
+          <mat-checkbox disabled fxFlex="48%" labelPosition="before" formControlName="addSavings" class="margin-v">
             {{'Client_Component.ClientStepper.GeneralStep.checkboxOpenAccount' |translate}}
           </mat-checkbox>
           <mat-form-field *ngIf="createClientForm.contains('savingsProductId')" fxFlex="48%">
             <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelSavingProduct' |translate}}</mat-label>
-            <mat-select required formControlName="savingsProductId">
+            <mat-select disabled required formControlName="savingsProductId">
               <mat-option *ngFor="let product of savingProductOptions" [value]="product.id">
                 {{ product.name }}
               </mat-option>
@@ -211,7 +211,7 @@
                formGroupName="clientNonPersonDetails" *ngIf="createClientForm.contains('clientNonPersonDetails')">
             <mat-form-field fxFlex="48%">
               <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpValidDate' |translate}}</mat-label>
-              <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="incorpValidityTillDateDatePicker"
+              <input  disabled matInput [min]="minDate" [max]="maxDate" [matDatepicker]="incorpValidityTillDateDatePicker"
                      formControlName="incorpValidityTillDate">
               <mat-datepicker-toggle matSuffix [for]="incorpValidityTillDateDatePicker"></mat-datepicker-toggle>
               <mat-datepicker #incorpValidityTillDateDatePicker></mat-datepicker>
@@ -219,7 +219,7 @@
 
             <mat-form-field fxFlex="48%">
               <mat-label>{{'Client_Component.ClientStepper.GeneralStep.labelCorpID' |translate}}</mat-label>
-              <input matInput formControlName="incorpNumber">
+              <input disabled matInput formControlName="incorpNumber">
             </mat-form-field>
 
 
