--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div fxLayout="column" id="footer">
   <!-- <mat-divider fxFlexAlign="center" class="divider"></mat-divider> -->
-  <p fxFlexAlign="left" class="footer-content">{{'Footer_Component.Version' | translate}} {{ version }} - {{'Footer_Component.Uptodate' | translate}}</p>
+  <!-- <p fxFlexAlign="left" class="footer-content">{{'Footer_Component.Version' | translate}} {{ version }} - {{'Footer_Component.Uptodate' | translate}}</p> -->
 </div>
