--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -102,65 +102,74 @@
               <span class="sum_lable">PNL</span>
             </div>
           </div>
-        </mat-card-content>
-      </mat-card>
-      <!--  Kết thúc  -->
-      <!--  Các điều kiện tìm kiếm  -->
-      <mat-accordion class="search_area">
-        <mat-expansion-panel expanded="false" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-          <mat-expansion-panel-header>
-            <mat-panel-title> Xem theo </mat-panel-title>
-          </mat-expansion-panel-header>
-          <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
-            <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
-              <mat-label>Chi nhánh</mat-label>
-              <mat-select formControlName="officeId">
-                <mat-option *ngFor="let type of offices" [value]="type.officeId">
-                  {{ type.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="18%">
-              <mat-label>Loại gia dịch</mat-label>
-              <mat-select formControlName="productId">
-                <mat-option *ngFor="let type of transactionType" [value]="type.value">
-                  {{ type.label }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+        <!-- </div> -->
+      </mat-card-content>
+    </mat-card>
+<!--  Kết thúc  -->
+<!--  Các điều kiện tìm kiếm  -->
+    <mat-accordion class="search-area">
+      <mat-expansion-panel expanded="false" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title> Xem theo </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
 
-            <mat-form-field fxFlex="18%">
-              <mat-label>Trạng thái giao dịch</mat-label>
-              <mat-select formControlName="status">
-                <mat-option *ngFor="let type of statusOption" [value]="type.value">
-                  {{ type.label }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+          <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
+            <mat-label>Chi nhánh</mat-label>
+            <input placeholder="Tìm chi nhánh" formControlName="officeId"
+              matInput
+              (click)="this.resetAutoCompleteOffice()"
+              [matAutocomplete]="officeAutocomplete"
+            />
+          </mat-form-field>
 
-            <mat-form-field fxFlex="18%">
-              <mat-label>Đối tác</mat-label>
-              <mat-select formControlName="partnerCode">
-                <mat-option *ngFor="let type of partners" [value]="type.code">
-                  {{ type.desc }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+          <mat-autocomplete #officeAutocomplete="matAutocomplete" [displayWith]="displayOffice">
+            <mat-option *ngFor="let office of officesOptions | async" [value]="office">
+              {{ displayOffice(office) }}
+            </mat-option>
+          </mat-autocomplete>
 
-            <mat-form-field fxFlex="18%">
-              <mat-label>Đại lý</mat-label>
-              <input matInput formControlName="agencyName" />
-            </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Loại gia dịch</mat-label>
+            <mat-select formControlName="productId">
+              <mat-option *ngFor="let type of transactionType" [value]="type.value">
+                {{ type.label }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-            <mat-form-field fxFlex="18%">
-              <mat-label>Khách hàng</mat-label>
-              <input matInput formControlName="panHolderName" />
-            </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Trạng thái giao dịch</mat-label>
+            <mat-select formControlName="status">
+              <mat-option *ngFor="let type of statusOption" [value]="type.value">
+                {{ type.label }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-            <mat-form-field fxFlex="18%">
-              <mat-label>Mã máy</mat-label>
-              <input matInput formControlName="terminalId" />
-              <!-- <mat-select formControlName="terminalId">
+          <mat-form-field fxFlex="18%">
+            <mat-label>Đối tác</mat-label>
+            <mat-select formControlName="partnerCode">
+              <mat-option *ngFor="let type of partners" [value]="type.code">
+                {{ type.desc }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="18%">
+            <mat-label>Đại lý</mat-label>
+            <input matInput formControlName="agencyName" />
+          </mat-form-field>
+
+          <mat-form-field fxFlex="18%">
+            <mat-label>Khách hàng</mat-label>
+            <input matInput formControlName="panHolderName" />
+          </mat-form-field>
+
+          <mat-form-field fxFlex="18%">
+            <mat-label>Mã máy</mat-label>
+            <input matInput formControlName="terminalId" />
+            <!-- <mat-select formControlName="terminalId">
               <mat-option *ngFor="let terminal of terminals" [value]="terminal.terminalId">
                 {{ terminal.terminalName }}
               </mat-option>
