--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -271,10 +271,9 @@
           máy bán hàng
         </th>
         <td mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
-          <!-- {{ journalEntry.officeName }} <br /> -->
+          {{ journalEntry.officeName }} <br />
           <span class="blue_text">{{ journalEntry.createdByName }} </span><br />
           <span class="red_text">{{ displayTerminalName(journalEntry.terminalId) }}</span><br />
-          <span class="green_text">{{ journalEntry.officeName }} </span>
         </td>
       </ng-container>
 
