--- a/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
@@ -108,7 +108,7 @@
     mat-raised-button
     color="primary"
     [mat-dialog-close]="{ data: form, documentTypes: documentTypes, existBin: existBin }"
-    [disabled]="form.contains('expiredDate') && !this.form.valid"
+    [disabled]="!this.form.valid"
   >
     {{ "Shared_Component.FormDialog.btnAdd" | translate }}
   </button>
