--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
         <mat-label>Từ ngày</mat-label>
-        <input matInput [matDatepicker]="transactionDateFromPicker" [min]="minDate" min formControlName="fromDate" />
+        <input matInput [matDatepicker]="transactionDateFromPicker" [min]="minDate"  formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
@@ -99,8 +99,8 @@
       </ng-container>
 
       <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số thẻ (Ngân hàng)</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
+        <th mat-header-cell  *matHeaderCellDef>Số thẻ (Ngân hàng)</th>
+        <td mat-cell *matCellDef="let card">
           {{ card.cardNumber.replace("XXX-XXX", "X") }} (
             <span style="color: red; font-weight: bold">{{ card.bankCode }}</span>
             )
@@ -128,8 +128,8 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Trạng thái</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
+        <th mat-header-cell  *matHeaderCellDef>Trạng thái</th>
+        <td mat-cell   *matCellDef="let card">
           <mat-form-field appearance="outline">
             <select  matSelect [(ngModel)]="card.trackingState" matNativeControl>
               <option *ngFor="let status of statusOption" [value]="status.refid">
@@ -140,8 +140,8 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="note">
-        <th mat-header-cell *matHeaderCellDef>Ghi chú</th>
-        <td mat-cell *matCellDef="let card">
+        <th mat-header-cell   *matHeaderCellDef>Ghi chú</th>
+        <td mat-cell  *matCellDef="let card">
           <mat-form-field appearance="outline">
             <select matSelect [(ngModel)]="card.note" matNativeControl>
               <option *ngFor="let status of noteOption" [value]="status.refid">
@@ -153,9 +153,9 @@
       </ng-container>
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef  >Hành động</th>
-        <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 8% !important; text-align: center">
-          <mat-icon style="color: green" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
-          <mat-icon style="color: blue" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)"
+        <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 8% !important; text-align: center;">
+          <mat-icon style="color: green;" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
+          <mat-icon style="color: blue;" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)"
             >attach_money</mat-icon
           >
           <!-- <mat-icon style="color: red" title="Lên lịch Advance" (click)="showCreateRollTermScheduleDialog(card)"
