--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -92,19 +92,22 @@
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số điện thoại</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số điện thoại/ <br/> Số thẻ (Ngân hàng)</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
-          {{ card.clientPhone }}
+          {{ card.clientPhone }} <br />
+          {{ card.cardNumber.replace("XXX-XXX", "X") }} (
+            <span style="color: red; font-weight: bold">{{ card.bankCode }}</span>
+            )
         </td>
       </ng-container>
 
       <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số thẻ (Ngân hàng)</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
-          {{ card.cardNumber.replace("XXX-XXX", "X") }} (
-            <span style="color: red; font-weight: bold">{{ card.bankCode }}</span>
-            )
-
+        <th mat-header-cell  *matHeaderCellDef>Chi nhánh/ <br/> Nhân viên</th>
+        <td mat-cell *matCellDef="let card">
+          <label style="color: blue; font-weight: bold;">
+            {{ card.officeName }} <br />
+            {{ card.staffName }}
+            </label>
         </td>
       </ng-container>
 
