--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -254,8 +254,8 @@
 </mat-menu>
 
 <mat-menu #BookingMenu="matMenu" [overlapTrigger]="false">
-  <button disabled mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
-  <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">Quản lý booking nội bộ</button>
+  <button disabled mat-menu-item *midasHasPermission="'CREATE_BOOKING_INTERNAL'" routerLink="/booking/create">Tạo booking nội bộ</button>
+  <button *midasHasPermission="'MANAGE_BOOKING_INTERNAL'" mat-menu-item routerLink="/booking/view">Quản lý booking nội bộ</button>
 </mat-menu>
 
 <mat-menu #CardTransferMenu="matMenu" [overlapTrigger]="false">
