--- a/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
+++ b/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
@@ -89,17 +89,27 @@
             <fa-icon [icon]="!addPaymentDetailsFlag ? 'plus-circle' : 'minus-circle'" size="lg"></fa-icon>
           </button>
         </div> -->
-
+        <mat-form-field *ngIf="savingAccountTransactionForm.controls['bankNumber']">
+          <mat-label>Chi nhánh</mat-label>
+          <!-- <input formControlName="bankNumber" matInput /> -->
+          <mat-select formControlName="bankNumber">
+            <mat-option *ngFor="let office of offices" selected label="{{ office.name }}" value="{{ office.id }}">
+              {{ office.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['accountNumber'] && !showStaffChoose">
           <mat-label>Account Number</mat-label>
           <input type="number" formControlName="accountNumber" matInput />
         </mat-form-field>
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['accountNumber'] && showStaffChoose">
           <mat-label>Account Number</mat-label>
-          <!-- <input type="number" formControlName="accountNumber" matInput /> -->
           <mat-select formControlName="accountNumber">
-            <mat-option selected label="Vương Ngọc Khiêm" value="51"> Vương Ngọc Khiêm </mat-option>
-            <mat-option label="Đặng Tô Vân Toàn" value="43"> Đặng Tô Vân Toàn </mat-option>
+            <!-- <mat-option selected label="Vương Ngọc Khiêm" value="51"> Vương Ngọc Khiêm </mat-option>
+            <mat-option label="Đặng Tô Vân Toàn" value="43"> Đặng Tô Vân Toàn </mat-option> -->
+            <mat-option *ngFor="let staff of limitInfo?.listStaff" selected label="{{ staff.displayName }}" value="{{ staff.staffId }}">
+              {{ staff.displayName }}
+            </mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -118,15 +128,7 @@
           <input formControlName="receiptNumber" matInput />
         </mat-form-field>
 
-        <mat-form-field *ngIf="savingAccountTransactionForm.controls['bankNumber']">
-          <mat-label>Chi nhánh</mat-label>
-          <!-- <input formControlName="bankNumber" matInput /> -->
-          <mat-select formControlName="bankNumber">
-            <mat-option *ngFor="let office of offices" selected label="{{ office.name }}" value="{{ office.id }}">
-              {{ office.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+
 
         <mat-form-field>
           <mat-label>Ghi chú</mat-label>
