--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -114,7 +114,7 @@
         </mat-expansion-panel-header>
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
 
-          <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
+          <mat-form-field fxFlex="18%" >
             <mat-label>Chi nhánh</mat-label>
             <input placeholder="Tìm chi nhánh" formControlName="officeId"
               matInput
