--- a/src/app/loans/loans-view/loan-account-actions/add-loan-charge/add-loan-charge.component.html
+++ b/src/app/loans/loans-view/loan-account-actions/add-loan-charge/add-loan-charge.component.html
@@ -8,52 +8,52 @@
 
         <div fxLayout="column">
           <mat-form-field>
-            <mat-label>Charge</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddLoanCharge.chargeId'| translate }}</mat-label>
             <mat-select required formControlName="chargeId">
               <mat-option *ngFor="let loanCharge of loanChargeOptions" [value]="loanCharge.id">
                 {{ loanCharge.name + ' (' + loanCharge?.currency.name + ')' }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="loanChargeForm.controls.chargeId.hasError('required')">
-              Charge is <strong>required</strong>
+              {{'Loans.View.Actions.AddLoanCharge.errchargeId'| translate }}<strong>{{'Loans.View.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Amount</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddLoanCharge.amount'| translate }}</mat-label>
             <input currencyMask type="text" required matInput formControlName="amount" />
             <mat-error *ngIf="loanChargeForm.controls.amount.hasError('required')">
-              Amount is <strong>required</strong>
+              {{'Loans.View.Actions.AddLoanCharge.erramount'| translate }}<strong>{{'Loans.View.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Charge Calculation</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddLoanCharge.chargeCalculation'| translate }}</mat-label>
             <input matInput formControlName="chargeCalculation" />
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Charge Time</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddLoanCharge.chargeTime'| translate }}</mat-label>
             <input matInput formControlName="chargeTime" />
           </mat-form-field>
 
           <mat-form-field *ngIf="loanChargeForm.controls['dueDate']">
-            <mat-label>Due On</mat-label>
+            <mat-label>{{'Loans.View.Actions.AddLoanCharge.dueDate'| translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="dueDatePicker" required
               formControlName="dueDate">
             <mat-datepicker-toggle matSuffix [for]="dueDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #dueDatePicker></mat-datepicker>
             <mat-error *ngIf="loanChargeForm.controls.dueDate.hasError('required')">
-              Due Date is <strong>required</strong>
+              {{'Loans.View.Actions.AddLoanCharge.errdueDate'| translate }}<strong>{{'Loans.View.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
         </div>
 
         <mat-card-actions fxLayoutGap="5px" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
-          <button type="button" mat-raised-button [routerLink]="['../../general']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../../general']">{{ "ShareButton.CancelEng" | translate }}</button>
           <button mat-raised-button color="primary" [disabled]="!loanChargeForm.valid"
-            *midasHasPermission="'CREATE_LOANCHARGE'">Submit</button>
+            *midasHasPermission="'CREATE_LOANCHARGE'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
