--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -9,29 +9,29 @@
 
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Main Configuration
+          {{'SettingsComponent.title'| translate}}
         </mat-panel-title>
       </mat-expansion-panel-header>
 
       <div fxLayout="column">
 
         <mat-form-field>
-          <mat-label>Name of the Organization</mat-label>
+          <mat-label>{{'SettingsComponent.NameOrganization'| translate}}</mat-label>
           <input matInput>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Description</mat-label>
+          <mat-label>{{'SettingsComponent.Description'| translate}}</mat-label>
           <textarea matInput></textarea>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Summary</mat-label>
+          <mat-label>{{'SettingsComponent.Summary'| translate}}</mat-label>
           <textarea matInput></textarea>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Default Language</mat-label>
+          <mat-label>{{'SettingsComponent.Language'| translate}}</mat-label>
           <mat-select [formControl]="language" [compareWith]="compareOptions">
             <mat-option *ngFor="let language of languages" [value]="language">
               {{ language.name }}
@@ -40,7 +40,7 @@
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Default Date Format</mat-label>
+          <mat-label>{{'SettingsComponent.dateFormat'| translate}}</mat-label>
           <mat-select [formControl]="dateFormat">
             <mat-option *ngFor="let dateFormat of dateFormats" [value]="dateFormat">
               {{ dateFormat }}
@@ -56,22 +56,22 @@
 
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Images
+          {{'SettingsComponent.Images'| translate}}
         </mat-panel-title>
       </mat-expansion-panel-header>
 
       <div fxLayout="column">
 
-        <span class="header">Favicon</span>
+        <span class="header">{{'SettingsComponent.Favicon'| translate}}</span>
         <mifosx-file-upload></mifosx-file-upload>
 
-        <span class="header">Cover Image</span>
+        <span class="header">{{'SettingsComponent.CoverImage'| translate}}</span>
         <mifosx-file-upload></mifosx-file-upload>
 
-        <span class="header">Logo</span>
+        <span class="header">{{'SettingsComponent.Logo'| translate}}</span>
         <mifosx-file-upload></mifosx-file-upload>
 
-        <span class="header">Logo with Organization Name</span>
+        <span class="header">{{'SettingsComponent.LogoOrganization'| translate}}</span>
         <mifosx-file-upload></mifosx-file-upload>
 
       </div>
@@ -82,17 +82,17 @@
 
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Theme and Font
+          {{'SettingsComponent.ThemeFont'| translate}}
         </mat-panel-title>
       </mat-expansion-panel-header>
 
       <div fxLayout="column">
 
-        <span class="header">Theme</span>
+        <span class="header">{{'SettingsComponent.Theme'| translate}}</span>
         <midas-theme-picker></midas-theme-picker>
 
         <mat-form-field>
-          <mat-label>Default Font</mat-label>
+          <mat-label>{{'SettingsComponent.DefaultFont'| translate}}</mat-label>
           <mat-select>
             <mat-option *ngFor="let font of fonts" [value]="font">
               {{ font }}
@@ -108,24 +108,24 @@
 
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Contact Information
+          {{'SettingsComponent.ContactInformation'| translate}}
         </mat-panel-title>
       </mat-expansion-panel-header>
 
       <div fxLayout="column">
 
         <mat-form-field>
-          <mat-label>Website</mat-label>
+          <mat-label>{{'SettingsComponent.Website'| translate}}</mat-label>
           <input type="url" matInput>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Email</mat-label>
+          <mat-label>{{'SettingsComponent.Email'| translate}}</mat-label>
           <input type="email" matInput>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Contact No</mat-label>
+          <mat-label>{{'SettingsComponent.ContactNo'| translate}}</mat-label>
           <input type="tel" matInput>
         </mat-form-field>
 
