--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -93,7 +93,12 @@
     </mat-form-field>
     <mat-form-field fxFlex="20%">
       <mat-label>Thông tin khách hàng</mat-label>
-      <input matInput type="text" formControlName="query" />
+      <input matInput type="text" placeholder="Tên, số cmnd khách hàng" formControlName="query" />
+    </mat-form-field>
+
+    <mat-form-field fxFlex="20%">
+      <mat-label>Số thẻ</mat-label>
+      <input matInput type="text" formControlName="cardNumber" />
     </mat-form-field>
 
     <mat-form-field fxFlex="20%">
